-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.5.0
-
None
-
Tried on Win, OSX
-
0f8fc8cbe97103885b42697b3b012850d0c181da
It works in 3.3 - I can save a note in profiler and it gets loaded. In 3.5 it got broken - I can see my note in the qtd file. But loading it up doesn't show the note anymore. Next save doesn't have the note even in the file. Please fix, this feature is great. (opensource version)
| For Gerrit Dashboard: QTCREATORBUG-15077 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 125950,2 | QmlProfiler: Load notes after timeline models are finished | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |