QmlProfiler: Load notes after timeline models are finished

Otherwise the notes cannot be associated with timeline events.

Change-Id: I9a2f039fddd36c9a6bbaca3c0864c75e33cc479d
Task-number: QTCREATORBUG-15077
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>